--- a/content/templates/page.html
+++ b/content/templates/page.html
@@ -5,31 +5,29 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     {% endblock %}
     {% block page_css %}
-        <link type="text/css" href="/css/page.css" rel="stylesheet">
-        <link type="text/css" href="/css/cart.css" rel="stylesheet">
-        <link type="text/css" href="/css/section.css" rel="stylesheet">
-        <link type="text/css" href="/css/section_start.css" rel="stylesheet">
-        <link type="text/css" href="/css/gallery.css" rel="stylesheet">
-        <link type="text/css" href="/css/last_visited.css" rel="stylesheet">
-        <!--<link type="text/css" href="/css/seccion_inicio.css" rel="stylesheet">-->
-        <!--<link type="text/css" href="/css/old/comun.css" rel="stylesheet">-->
+        {% include "css/page.css" %}
+        {% include "css/cart.css" %}
+        {% include "css/section.css" %}
+        {% include "css/section_start.css" %}
+        {% include "css/gallery.css" %}
+        {% include "css/last_visited.css" %}
     {% endblock %}
     {% block ie_fix %}
         <!--[if lt IE 7]>
             <link href="/estilos/ie.css" type="text/css" rel="stylesheet">
         <![endif]-->  
     {% endblock %}
-    {% block head_extra -%}{%- endblock %}
+    {% block head_extra %}{% endblock %}
 
 </head>
 <body>
-    {% block body_top -%} {%- endblock %}
+    {% block body_top %} {% endblock %}
     <div id="canvas" class="canvas">
-        <div id="top">{% block canvas_top -%}{%- endblock %}</div>
-        <div id="messages">{% block canvas_messages -%} {%- endblock %}</div>
-        <div id="content">{% block canvas_content -%}{%- endblock %}</div>
-        <div id="bottom">{% block canvas_bottom -%} {%- endblock %}</div>
+        <div id="top">{% block canvas_top %}{% endblock %}</div>
+        <div id="messages">{% block canvas_messages %} {% endblock %}</div>
+        <div id="content">{% block canvas_content %}{% endblock %}</div>
+        <div id="bottom">{% block canvas_bottom %} {% endblock %}</div>
     </div>
-    {% block body_bottom -%} {%- endblock %}
+    {% block body_bottom %} {% endblock %}
 </body>
 </html>
