--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -16,18 +16,27 @@
 {% block canvas_content -%}
     <div class="barraCentral" id="barraCentral">
         <div id="seccionTematika">
-            <div id="showcase"> {% include "home/showcase.html" %} </div>
-            <div id="comments"> {% include "home/comments.html" %} </div>
+            <div id="product-gallery">
+                {% include "product_gallery.html" %}
+            </div>
+            <div id="comments">
+{# DISABLED WAITING FOR DATASET
+                {% include "comments.html" %}
+#}
+            </div>
             <div id="lastvisited"
                     style="width: 900px; padding-top: 10px; float: left;">
-                {% include "home/lastvisited.html" %}
+                {% include "last_visited.html" %}
             </div>
         </div>
-        <div id="rightmenu"> {% include "home/rightmenu.html" %} </div>
+        <div id="rightmenu">
+            {# XXX move to page.html #}
+            {% include "right_menu.html" %}
+        </div>
     </div> 
 {%- endblock %}
 
 {% block body_bottom -%}
-    {% include "home/extra.html" %}
+    {% include "fragments/extra.html" %}
     {% include "home/bottom.js" %}
 {%-endblock %}
