More doc on home page

--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -3,7 +3,7 @@
 {% block head_extra %}
     {% include "home/index.css" %}
 {% endblock %}
-{% block bottom %}
+{% block canvas_bottom %}
     {% include "home/bottom.html" %}
 {% endblock %}
 {% block canvas_top %}
