--- a/content/templates/home/bottom.html
+++ b/content/templates/home/bottom.html
@@ -1,4 +1,4 @@
-<!-- JavaScript bottom -->>
+<!-- JavaScript bottom -->
 <script type="text/javascript" src="/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="/js/popups.js"></script>
 <!-- script type="text/javascript" src="/js/equalcolumnsInicio.js"></script>
