Rename top of canvas fragment

--- a/content/templates/page.html
+++ b/content/templates/page.html
@@ -25,7 +25,7 @@
     <div id="canvas" class="canvas">
         <div id="top">
         {% block canvas_top %}
-            {% include "fragments/top.html" %}
+            {% include "fragments/canvas_top.html" %}
         {% endblock %}
         </div>
         <div id="messages">
