Fragments with styles use html blocks

--- a/content/templates/css/cart.html
+++ b/content/templates/css/cart.html
@@ -1,3 +1,4 @@
+<style type="text/css">
 /* cart.css */
 .efectoCarritoMod {
 position:fixed;
@@ -70,3 +71,4 @@ color:#777;
 text-decoration:none;
 }
 
+</style>
