--- a/content/templates/css/gallery.html
+++ b/content/templates/css/gallery.html
@@ -1,3 +1,4 @@
+<style type="text/css">
 /* gallery.css */
 .disabledEfect {
 position:absolute;
@@ -264,3 +265,4 @@ margin-bottom:1px;
 margin-top:10px;
 }
 
+</style>
