--- a/content/templates/css/last_visited.html
+++ b/content/templates/css/last_visited.html
@@ -1,3 +1,4 @@
+<style type="text/css">
 /* last_visited.css */
 .GultvisitadosB {
 background-color:#F4F5F6;
@@ -81,3 +82,4 @@ text-decoration:underline;
 line-height:16px;
 }
 
+</style>
