--- a/content/templates/css/page.html
+++ b/content/templates/css/page.html
@@ -1,3 +1,4 @@
+<style type="text/css">
 /* page.css */
 .Gtablaprincipal
 {
@@ -793,3 +794,4 @@ a.FSubCategorias3:hover
 	text-decoration:none;
 }
 
+</style>
