--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -1,7 +1,7 @@
 {% extends "page.html" %}
 
 {% block head_extra %}
-    {% include "home/index.css" %}
+    {% include "home/styles.html" %}
 {% endblock %}
 
 {% block canvas_content -%}
