--- a/content/templates/page.html
+++ b/content/templates/page.html
@@ -5,12 +5,12 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     {% endblock %}
     {% block page_css %}
-        {% include "css/page.css" %}
-        {% include "css/cart.css" %}
-        {% include "css/section.css" %}
-        {% include "css/section_index.css" %}
-        {% include "css/gallery.css" %}
-        {% include "css/last_visited.css" %}
+        {% include "css/page.html" %}
+        {% include "css/cart.html" %}
+        {% include "css/section.html" %}
+        {% include "css/section_index.html" %}
+        {% include "css/gallery.html" %}
+        {% include "css/last_visited.html" %}
     {% endblock %}
     {% block ie_fix %}
         <!--[if lt IE 7]>
