--- a/content/templates/css/section.html
+++ b/content/templates/css/section.html
@@ -1,3 +1,4 @@
+<style type="text/css">
 /* section.css */
 a {
 color:#ED7C24;
@@ -474,3 +475,4 @@ height:20px;
 background-color:#004B85;
 }
 
+</style>
