--- a/content/templates/css/section_index.html
+++ b/content/templates/css/section_index.html
@@ -1,3 +1,4 @@
+<style type="text/css">
 /* section_start.css */
 #seccionTematika {
 width:906px;
@@ -51,3 +52,4 @@ background-image:url(/imagenes/rediseno/imagenes/seccionTematika/panelSeccQuidTo
 background-image:url(/imagenes/rediseno/imagenes/seccionTematika/panelSeccExtraTop-back.gif);
 }
 
+</style>
