--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -1,7 +1,9 @@
 {% extends "page.html" %}
 
 {% block head_extra %}
-    {% include "home/styles.html" %}
+    <style type="text/css; charsert=utf-8">
+        {% include "home/styles.css" %}
+    </style>
 {% endblock %}
 
 {% block canvas_content -%}
