minor: rename _bottom to _footer

--- a/content/templates/page.html
+++ b/content/templates/page.html
@@ -56,7 +56,7 @@
         </div>
         <div id="content">{% block canvas_content %}{% endblock %}</div>
         <div id="bottom">
-        {% block canvas_bottom %}
+        {% block canvas_footer %}
             {% include "fragments/canvas_footer.html" %}
         {% endblock %}
         </div>
