--- a/content/templates/fragments/scripts.html
+++ b/content/templates/fragments/scripts.html
@@ -1,7 +1,7 @@
 <!-- JavaScript bottom -->
 <script type="text/javascript" src="{{ url_static }}/js/jquery-1.4.2.min.js"></script>
 
-{% include "js/popups.js" %}
+{% include "fragments/popups.js" %}
 
 <!-- script type="text/javascript" src="/js/equalcolumnsInicio.js"></script>
 <script type="text/javascript" src="/js/buscador.js"></script>
@@ -36,7 +36,7 @@
 </script>
 
 <!-- New Scripts -->
-{% include "js/app.js" %}
+{% include "fragments/app.js" %}
 <script type="text/javascript" src="/js/comments.js"></script>
 <script type="text/javascript" src="home-comments.js"></script>
 <script type="text/javascript" src="/js/messages.js"></script>
