Analytics included with scripts fragment

--- a/content/templates/fragments/scripts.html
+++ b/content/templates/fragments/scripts.html
@@ -61,5 +61,7 @@ jQuery(document).ready(function() {
 	//.bind("mouseover", function(){$(this).trigger("click"); 
 });
 
+{% include "fragments/analytics.js" %}
+
 </script>
 
