Proper paths for external scripts

--- a/content/templates/fragments/scripts.html
+++ b/content/templates/fragments/scripts.html
@@ -40,8 +40,8 @@
 <script type="text/javascript" src="home-tooltip.js"></script>
 <!-- Scripts por herencia -->
 <!-- JQuery Carousel -->
-<script type="text/javascript" src="/carousel/jquery.tinycarousel.js"></script>
-<script type="text/javascript" src="/carousel/jquery.colorbox.js"></script>
+<script type="text/javascript" src="{{ url_static }}/js/jquery.tinycarousel.js"></script>
+<script type="text/javascript" src="{{ url_static }}/js/jquery.colorbox.js"></script>
 
 <script type="text/javascript">
 
