--- a/content/templates/page.html
+++ b/content/templates/page.html
@@ -22,7 +22,7 @@
         <link rel="search" type="application/opensearchdescription+xml" title="Tematika" href="/plugin/search/busquedaInicio.xml">
     {%- endblock %}
     
-    <style type="text/css; charsert=utf-8">
+    <style type="text/css">
     {% block page_css %}
         {% include "css/common.css" %}
         {% include "css/cart.css" %}
