Relocate css fragments to proper place

--- a/content/templates/page.html
+++ b/content/templates/page.html
@@ -24,13 +24,13 @@
     
     <style type="text/css">
     {% block page_css %}
-        {% include "css/common.css" %}
-        {% include "css/cart.css" %}
-        {% include "css/section.css" %}
-        {% include "css/section_index.css" %}
-        {% include "css/gallery.css" %}
-        {% include "css/last_visited.css" %}
-        {% include "css/page.css" %}
+        {% include "fragments/common.css" %}
+        {% include "fragments/cart.css" %}
+        {% include "fragments/section.css" %}
+        {% include "fragments/section_index.css" %}
+        {% include "fragments/gallery.css" %}
+        {% include "fragments/last_visited.css" %}
+        {% include "fragments/page.css" %}
     {% endblock %}
     </style>
     {% block ie_fix %}
