--- a/content/templates/fragments/extra.html
+++ b/content/templates/fragments/extra.html
@@ -11,8 +11,10 @@
 		<img id="carritoImagen" class="efectoCarritoImag" src="" alt="" />
 	</div>
 	<div id="efectoCarritoB">
-		<a href="javascript:carrito_CloseCarrito()"> <img
-			src="/imagenes/b-carrContinuar.gif" alt="Continuar" border="0" /> </a>
+		<a href="javascript:carrito_CloseCarrito()">
+            <img src="{{ url_static }}/imagenes/b-carrContinuar.gif"
+                    alt="Continuar" style="border:0;">
+        </a>
 	</div>
 </div>
 <div id="modalBack" style="display: none"></div>
