--- a/content/templates/fragments/last_visited.html
+++ b/content/templates/fragments/last_visited.html
@@ -1,4 +1,4 @@
-<table align="center" width="390" border="0" cellpadding="0"
+<table style="margin: auto;" width="390" border="0" cellpadding="0"
 	cellspacing="0" class="modulosmedio">
 	<tr>
 		<td class="titulosceldas"><img
@@ -8,7 +8,7 @@
 	</tr>
 
 	<tr>
-		<td><div class="GultvisitadosB" align="center">
+		<td><div class="GultvisitadosB" style="margin: auto;">
 				<div>
 					<img src="{{ url_static }}/imagenes/ultvisitados.gif" 
 					height="30" style="margin-top:10px;" alt="" />
