--- a/content/templates/page.html
+++ b/content/templates/page.html
@@ -61,9 +61,14 @@
         {% endblock %}
         </div>
     </div>
+
     {% block scripts %}
         {% include "fragments/scripts.html" %}
     {% endblock %}
-    {% block body_bottom %} {% endblock %}
+
+    {% block body_bottom %}
+        {% include "fragments/extra.html" %}
+    {% endblock %}
+
 </body>
 </html>
