--- a/content/templates/fragments/extra.html
+++ b/content/templates/fragments/extra.html
@@ -3,12 +3,12 @@
 	style="display: none; position: fixed;">
 	<div class="efectoCarritoTxt">
 		<span class="txtMsgCarritoOK" id="msgCarritoOK"></span> <span
-			id="msgCarritoERROR" style="font-size: 12; color: red"></span><br />
+			id="msgCarritoERROR" style="font-size: 12; color: red"></span><br>
 		<span id="spnPrecioCarrito" class="txtPrecioCarrito"> PRECIO: $
 			<span class="txtPrecioCarrito" id="precioCarrito"></span>.- </span>
 	</div>
 	<div class="efectoCarritoImages">
-		<img id="carritoImagen" class="efectoCarritoImag" src="" alt="" />
+		<img id="carritoImagen" class="efectoCarritoImag" src="" alt="">
 	</div>
 	<div id="efectoCarritoB">
 		<a href="javascript:carrito_CloseCarrito()">
