--- a/content/templates/fragments/last_visited.html
+++ b/content/templates/fragments/last_visited.html
@@ -3,7 +3,7 @@
 	<tr>
 		<td class="titulosceldas"><img
 			src="{{ url_static }}/imagenes/inicio/t-ultimosvisitados.gif"
-			alt="Ultimos visitados" />
+			alt="Ultimos visitados">
 		</td>
 	</tr>
 
@@ -11,7 +11,7 @@
 		<td><div class="GultvisitadosB" style="margin: auto;">
 				<div>
 					<img src="{{ url_static }}/imagenes/ultvisitados.gif" 
-					height="30" style="margin-top:10px;" alt="" />
+					height="30" style="margin-top:10px;" alt="">
 				</div>
 				<div class="Ftexto03" style="margin-top: 10px">EN ESTE SECTOR
 					SE CARGARAN AUTOM&Aacute;TICAMENTE TODOS LOS PRODUCTOS QUE VISITES
