Use new URLs from sample data

--- a/content/templates/fragments/scripts.html
+++ b/content/templates/fragments/scripts.html
@@ -1,6 +1,6 @@
 <!-- Scripts -->
 <script type="text/javascript"
-        src="{{ url_static }}/js/jquery-1.4.2.min.js"></script>
+        src=http://"{{ url.static }}/js/jquery-1.4.2.min.js"></script>
 
 <script type="text/javascript">
 
@@ -40,8 +40,8 @@
 <script type="text/javascript" src="home-tooltip.js"></script>
 <!-- Scripts por herencia -->
 <!-- JQuery Carousel -->
-<script type="text/javascript" src="{{ url_static }}/js/jquery.tinycarousel.js"></script>
-<script type="text/javascript" src="{{ url_static }}/js/jquery.colorbox.js"></script>
+<script type="text/javascript" src=http://"{{ url.static }}/js/jquery.tinycarousel.js"></script>
+<script type="text/javascript" src=http://"{{ url.static }}/js/jquery.colorbox.js"></script>
 
 <script type="text/javascript">
 
