--- a/content/templates/fragments/cart.css
+++ b/content/templates/fragments/cart.css
@@ -7,7 +7,7 @@ left:50%;
 margin-left:-147px;
 top:40%;
 margin-top:-87px;
-background-image:url({{ url_static}}/imagenes/back-efectocarrito.gif);
+background-image:url(http://{{ url.static}}/imagenes/back-efectocarrito.gif);
 border:solid 1px #CCC;
 text-align:left;
 z-index:10001;
