--- a/content/templates/fragments/extra.html
+++ b/content/templates/fragments/extra.html
@@ -12,7 +12,7 @@
 	</div>
 	<div id="efectoCarritoB">
 		<a href="javascript:carrito_CloseCarrito()">
-            <img src="{{ url_static }}/imagenes/b-carrContinuar.gif"
+            <img src=http://"{{ url.static }}/imagenes/b-carrContinuar.gif"
                     alt="Continuar" style="border:0;">
         </a>
 	</div>
