--- a/content/templates/fragments/right_menu.html
+++ b/content/templates/fragments/right_menu.html
@@ -1,23 +1,21 @@
 <div class="panelSecciones" id="divBarraDerecha">
-	{%- if section not in ('books', 'home') -%}
+	{% if SubjectId in ('2', '3', '4', '5', '6') %}
 	    <a href="/libros" id="panelSeccLibros" title="Libros"><span></span></a>
-	{%- endif %}
-	{%- if section not in ('music', 'home') -%}
+	{% endif %}
+	{% if SubjectId in ('1', '3', '4', '5', '6') %}
 	    <a href="/musica" id="panelSeccMusica" title="M&uacute;sica"><span></span></a>
-	{%- endif %}
-	{%- if section not in ('movies', 'home') -%}
+	{% endif %}
+	{% if SubjectId in ('1', '2', '4', '5', '6') %}
 	    <a href="/peliculas" id="panelSeccPeliculas" title="Pel&iacute;culas"><span></span></a>
-	{%- endif %}
-	{%- if section not in ('games', 'home') -%}
+	{% endif %}
+	{% if SubjectId in ('1', '2', '3', '5', '6') %}
 	    <a href="/juguetes" id="panelSeccPasatiempos" title="Pasatiempos"><span></span></a>
-	{%- endif %}
-	{%- if section not in ('branches', 'home') -%}
+	{% endif %}
+	{% if SubjectId in ('1', '2', '3', '5', '6') %}
 	    <a href="/sucursales" id="panelSeccSucursales" title="Sucursales"><span></span></a>
-	{%- endif %}
-	{%- if section not in ('quid', 'home') -%}
+	{% endif %}
+	{% if SubjectId != '0' %}
 	    <a href="#" onclick="window.open('http://www.yenny-elateneo.com/index.php?idS=1');return false;" id="panelSeccQuid" title="Quid"><span></span></a>
-	{%- endif %}
-	{%- if section not in ('extra', 'home') -%}
 	    <a href="/extra" id="panelSeccExtra" title="eXtra!"><span></span></a>
-	{%- endif %}
+	{% endif %}
 </div>
